# varinteger

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  varint_encoding.rs
tests/: test.rs
