[package]
name = "varinteger"
version = "1.0.4-alpha.0"
description = "Rust module for encoding/decoding varints that doesn't do any IO. Inspired by the Node.js varint module"
authors = ["Mathias Buus <mathiasbuus@gmail.com>"]
repository = "https://github.com/mafintosh/varinteger-rs"
keywords = ["protobuf", "varint", "variable", "integer"]
readme = "README.md"
license = "MIT"
