[package]
name = "varinteger"
version = "2.0.0"
description = "Rust module for encoding/decoding varints that doesn't do any IO. Inspired by the Node.js varint module"
authors = ["James Halliday", "Karissa McKelvey <karissa.mckelvey@gmail.com>", "Mathias Buus <mathiasbuus@gmail.com>"]
repository = "https://github.com/datrs/varinteger"
keywords = ["protobuf", "varint", "variable", "integer"]
readme = "README.md"
license = "MIT"